# CodeMixToolkit

./: .gitignore  .pre-commit-config.yaml  Example Notebook.ipynb  LICENSE  README.md  codemix_visualization_test.html  compute.py  conda_env.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tags.py  test_csnli_api.py  tokenize-pos-awesoome-align.py  train_unique_utterances_en_hi_transltions_token_pos_alignments.json  word-noise.py
Evaluation/: README.md
Evaluation/Continued_Pretraining/: GCMContinuedPretraining.ipynb
Evaluation/GLUECoS/: bert-multi.txt  xlmr_base.txt  xlmr_gcm.txt
Evaluation/LINCE/: LinceLID.ipynb  LinceNER.ipynb  LincePOS.ipynb
codemix/: requirements.txt  setup.py
codemix/codemix/: __init__.py  align_util.py  codemix_viz.py  compute.py  config.py  cs_metrics.py  normalize.py  tags.py  tokenize_pos_awesome_align.py
codemix/codemix/data/: __init__.py  base.py  data_collection.py  (+1 more)
codemix_pkg/: setup.py
codemix_pkg/codemix/: align_util.py
codemix_pkg/codemix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
csnli/: .dockerignore  .gitignore  Dockerfile  README.md  README.rst  conda_env_csnli.yml  convert_conda_to_requirements.py  csnli_api.py  lang_tag_example.py  requirements_36.txt  requirements_from_conda.txt  requirements_latest_for37.txt  so_viterbi.c  test.py
docs/: explanation.md  index.md  reference.md
examples/: Example Notebook.ipynb  ExampleNotebook.ipynb
gcm/: README.md
src/codemixtoolkit/: _version.py
temp/: UpdateCodemixPackage  codemix_viz.py  model_train_final.py
temp/codemix_pkg/: setup.py
(+25 files in other folders)
