[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "codemixtoolkit"
description = "A toolkit for code-mixed language processing"
dynamic = ["version"]
authors = [
  { name="Prashant Kodali", email="prashant.kodali@research.iiit.ac.in" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ai4bharat_transliteration==1.1.3",
    "alphabet_detector==0.0.7",
    "datasets==3.3.1",
    "htbuilder==0.9.0",
    "indic_nlp_library==0.92",
    "ipython==8.12.3",
    "litellm==1.69.1",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "python-dotenv==1.1.0",
    "PyYAML==6.0.2",
    "sacrebleu==2.5.1",
    "scikit_learn==1.6.1",
    "setuptools==75.8.0",
    "st_annotated_text==4.0.2",
    "stanza==1.10.1",
    "torch==2.4.0",
    "tqdm==4.67.1",
    "transformers==4.49.0",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.14",
    "mkdocstrings-python==1.16.10",
    "accelerate==1.7.0",
    "evaluate==0.4.3",
    "docker==4.1.0"
]

[tool.setuptools_scm]
version_file = "src/codemixtoolkit/_version.py"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
# Add any CLI entry points here later if needed, for example:
# train-a = "scripts.train_a:main"